projects/nx/src/apps/*sso/authelia/sso.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: traefik-system
      sectionName: chezmoi.sh-websecure
  hostnames:
    - sso.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: authelia
          port: 80
